vlib/v/checker/tests/comptime_env/env_parser_errors_3.run.out
vlib/v/checker/tests/comptime_env/env_parser_errors_3.vv:1:3: error: no "$env('...')" could be found in "-I $env()/xyz".
    1 | #flag -I $env()/xyz
      |   ~~~~~~~~~~~~~~~~~
